@startuml entrypoint
class Administrator {
    +{static} entrypoint(args: String[]): void
    +{static} getNewPassword (pwSize: int): String
    +{static} writePasswordToFile (user: String, pass: String): void

}

class Main {
    +{static} entrypoint(args: String[]): void
}


Main o--> controller.OptionList
Main o--> db.MyMenu

Administrator ..> db.DbConnection: use

@enduml